<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profil"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/textColorDark"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        />

    <TextView
        android:id="@+id/labelFirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstname"
        android:layout_below="@+id/appTitle"
        />

    <TextView
        android:id="@+id/labelLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastname"
        android:layout_below="@+id/labelFirstname"/>

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/labelLastname"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/shoppingsLists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myShoppingLists"
        android:background="@color/colorAccent"
        android:textColor="@color/textColorClear"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/labelEmail"
        />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorClear"
        android:textColor="@color/textColorClear"
        android:text="@string/disconnect"
        android:layout_below="@+id/shoppingsLists"/>

</RelativeLayout>
