<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="5dp">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/textColorDark"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connecting"
        android:layout_below="@+id/appTitle"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColorClear"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/subscribeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subscribing"
        android:layout_below="@+id/loginButton"
        android:background="@color/colorAccent"
        android:textColor="@color/textColorClear"
        android:layout_marginTop="5dp"
        />


</RelativeLayout>